Converted all LaTeX files of the manual to use the new \ossep and \osus commands.
This will result in better formatting of the manual by making the linebreaking after '/' and '_'
characters consistent and universal.

--- a/docs/latex/consistency_tests.tex
+++ b/docs/latex/consistency_tests.tex
@@ -61,7 +61,7 @@ The consistency testing analysis is only available via the prompt/script UI mode
 
 \subsection{Consistency testing script mode -- the sample script} \label{sect: consistency tests - sample script}
 
-The following script can be found in the \directory{sample\_scripts} directory.
+The following script can be found in the \directory{sample\osus{}scripts} directory.
 
 \begin{lstlisting}
 """ Script for consistency testing.
