--- a/docs/latex/intro.tex
+++ b/docs/latex/intro.tex
@@ -389,7 +389,7 @@ Once your terminal is running, go to the directory containing your script using 
 
 \example{\$ relax your\_script.py}
 
-You will need to replace \file{your\_script.py} with the name of your script.  In most cases you would probably like to keep a log of all of the messages, warnings and errors relax produces for future reference.  To active logging within relax, type:
+You will need to replace \file{your\osus{}script.py} with the name of your script.  In most cases you would probably like to keep a log of all of the messages, warnings and errors relax produces for future reference.  To active logging within relax, type:
 
 \example{\$ relax --log log your\_script.py}
 
@@ -449,7 +449,7 @@ results.write(file='results', force=True)
 state.save('save', force=True)
 \end{lstlisting}
 
-Scripting is much more powerful than the prompt as advanced Python\index{Python} programming can be employed (see the file \file{relax\_curve\_diff.py} in the \directory{sample\_scripts} directory for an example).
+Scripting is much more powerful than the prompt as advanced Python\index{Python} programming can be employed (see the file \file{relax\osus{}curve\osus{}diff.py} in the \directory{sample\osus{}scripts} directory for an example).
 
 
 
@@ -457,7 +457,7 @@ Scripting is much more powerful than the prompt as advanced Python\index{Python}
 \subsubsection{Sample scripts}
 \index{scripting!sample scripts}
 
-A few sample scripts have been provided in the directory \directory{sample\_scripts}.  These can be copied and modified for different types of data analysis.
+A few sample scripts have been provided in the directory \directory{sample\osus{}scripts}.  These can be copied and modified for different types of data analysis.
 
 
 
@@ -635,7 +635,7 @@ Thanks to Gary Thompson's multi-processor framework, relax can be run on multi-c
 
 \subsection{Usage of the multi-processor}
 
-If you have access to a 256 node cluster and can run calculations on all nodes, assuming that the \file{dauvergne\_protocol.py} automated model-free analysis sample script will be used (after modification for the system under study), relax can be executed by typing:
+If you have access to a 256 node cluster and can run calculations on all nodes, assuming that the \file{dauvergne\osus{}protocol.py} automated model-free analysis sample script will be used (after modification for the system under study), relax can be executed by typing:
 
 \example{\$ mpirun -np 257 /usr/local/bin/relax --multi=`mpi4py' --tee log dauvergne\_protocol.py}
 
